# xianyu-ai-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
config/: config.yaml  prompts.yaml
docs/: architecture.md
src/: __init__.py  main.py
src/agents/: __init__.py  after_sales.py  base.py  coordinator.py  greeter.py  negotiator.py  product_expert.py
src/core/: __init__.py  engine.py  message.py  session.py
src/memory/: __init__.py  context.py
src/platform/: __init__.py  adapter.py  xianyu.py
src/utils/: __init__.py  helpers.py  logger.py
store/: business_plan.md  checklist.md
store/data/: products.json
store/scripts/: generate_listings.py  orders.py
tests/: __init__.py  test_agents.py  test_engine.py  test_message.py
